--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,9 +3,54 @@
 }
 
 body {
-  background-color: blue;
+  margin-left: auto;
+  margin-right: auto;
+  height: 1000px;
+  width: 400px;
+  border: 3px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-h1 {
-  color: red;
+header {
+  height: 80px;
+  width: 400px;
+  margin-top: -11px;
+  background-color: blue;
+  text-align: center;
+  position: fixed;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+  background-color: lightblue;
+}
+
+.question-card1,
+.question-card2,
+.question-card3,
+.question-card4 {
+  height: 150px;
+  width: 250px;
+  border: 2px solid black;
+  border-radius: 15px;
+  text-align: center;
+}
+
+footer {
+  height: 80px;
+  width: 400px;
+  margin-top: 700px;
+  background-color: blue;
+  text-align: center;
+  position: fixed;
+}
+
+.nav {
 }
