--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -8,10 +8,6 @@ body {
   height: 1000px;
   width: 400px;
   border: 3px solid black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
 }
 
 header {
@@ -26,7 +22,7 @@ header {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-top: 100px;
   background-color: lightblue;
@@ -36,11 +32,24 @@ main {
 .question-card2,
 .question-card3,
 .question-card4 {
-  height: 150px;
+  height: 200px;
   width: 250px;
   border: 2px solid black;
   border-radius: 15px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  height: 50px;
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 footer {
@@ -53,4 +62,8 @@ footer {
 }
 
 .nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 15px;
 }
