--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -5,18 +5,21 @@
 body {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 150px;
   height: 1000px;
   width: 400px;
-  border: 3px solid black;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
   height: 80px;
   width: 400px;
-  margin-top: -11px;
   background-color: blue;
   text-align: center;
   position: fixed;
+  margin-top: -8px;
 }
 
 main {
@@ -34,8 +37,11 @@ main {
 .question-card4 {
   height: 200px;
   width: 250px;
+  margin: 5%;
   border: 2px solid black;
   border-radius: 15px;
+  box-shadow: 3px 3px 5px blue;
+  background-color: rgba(255, 255, 255, 0.2);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -46,6 +52,8 @@ main {
 button {
   height: 50px;
   width: 100px;
+  border: 1px solid blue;
+  border-radius: 15px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -59,6 +67,7 @@ footer {
   background-color: blue;
   text-align: center;
   position: fixed;
+  bottom: 0%;
 }
 
 .nav {
